force-app/main/default/objects/RestockProduct__c/RestockProduct__c.object-meta.xml
<CustomObject>
    <label>RestockProduct</label>
    <nameField>
        <label>RestockProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RestockProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>