force-app/main/default/objects/RestockProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>RestockProducts</relationshipLabel>
    <relationshipName>RestockProducts</relationshipName>
    <type>Lookup</type>
</CustomField>