force-app/main/default/objects/RestockProduct__c/fields/Quantity_Restocked__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Restocked__c</fullName>
    <label>Quantity Restocked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>