force-app/main/default/objects/RestockProduct__c/fields/Restock_Status__c.field-meta.xml
<CustomField>
    <fullName>Restock_Status__c</fullName>
    <label>Restock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>