force-app/main/default/objects/RestockProduct__c/fields/Restock_Total__c.field-meta.xml
<CustomField>
    <fullName>Restock_Total__c</fullName>
    <formula>Quantity_Restocked__c * Product__r.Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restock Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>